--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <body>
 
     <div ng-app="app">
-        <div ng-controller="ContactController">
-            Hello, {{ name }}!
+        <div ng-controller="ContactController as contact">
+            Hello, {{ contact.name }}!<br />
+            Email: {{ contact.email }}<br />
+            Phone: {{ contact.phone }}<br />
+            <div ng-controller="StaffController as staff">
+                Staff Name: {{ staff.name }}<br />
+                Staff Email: {{ staff.email }}<br />
+                Staff Phone: {{ staff.phone }}<br />
+            </div>
+            <button ng-click="contact.changeName()">Click Me!</button>
         </div>
     </div>
 
